<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/addReportFragment"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/nav_bookmark" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />

</menu>